--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,8 @@ book:
     - index.qmd
     - intro.qmd
     - 01_table1.qmd
-    # - 03_propensity.qmd
-    # - 04_logistic.qmd
+    - 02_propensity.qmd
+    - 03_logistic.qmd
     - summary.qmd
     - references.qmd
 
